# ArxRate

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/arxgen/: crew.py  main.py
src/arxgen/config/: tasks.yaml
src/arxrate/: crew.py  main.py
src/arxrate/tools/: arxiv_tool.py
